# data_processing

./: .gitignore  algorithms.ipynb  convolution.ipynb  from_equilibration.ipynb  pfc_coupling.ipynb  plot_bresler.ipynb  plot_rust.ipynb  plot_symphas.ipynb  porods.ipynb
cpp/: CMakeLists.txt  fftw_r2r_r2c_sync_2d.h  fftw_r2r_r2c_sync_3d.h  main.cpp  writemat.h
cpp/simulation/: AGENT_ONBOARDING.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  RUNBOOK.md  TEST_PLAN_3D.md  WORKFLOW.md  analyze_trajectory.py  stack_videos.py  visualize.py  visualize_3d.py
cpp/simulation/include/: cell.cuh  cell3d.cuh  domain.cuh  domain3d.cuh  gpu_memory_tracker.cuh  integrator.cuh  integrator3d.cuh  io.cuh  kernels.cuh  kernels3d.cuh  physics.cuh  simulation.cuh  simulation3d.cuh  types.cuh  types3d.cuh
cpp/simulation/src/: integrator.cu  io.cu  io3d.cu  kernels3d.cu  kernels_optimized_v2.cu  kernels_optimized_v4.cu  main.cu
cudatest/: CMakeLists.txt  cuda.cu  cuda.cuh  cuda2.cu  cuda2.cuh  header.cpp  header.h  header2.cpp  header2.h  main.cu
rust/cell_data/: Cargo.toml
rust/cell_data/src/: compute.rs  main.rs  msd.rs  plot.rs  read.rs  server.rs  utils.rs
rust/vtk_viewer/: Cargo.toml
rust/vtk_viewer/src/: colormap.rs  main.rs  render.rs  vtk.rs
web/symphas-viewer/: package.json  tsconfig.json
web/symphas-viewer/src/: App.css  App.tsx  DataDisplay.tsx  DirectoryList.tsx  ImageDisplay.tsx  InspectDisplay.tsx  config.ts  index.tsx
