[package]
name = "cell_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
ndarray-npy = "0.7"
plotters = "0.3"
image = "0.23"
gif = "0.11"
regex = "1"
itertools = "0.10"
egui = "0.15"
eframe = "0.15"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
base64 = "0.13"

[profile.release]
opt-level = 3